--- a/qna-hub-spark-main/index.html
+++ b/qna-hub-spark-main/index.html
@@ -1,21 +1,54 @@
-<!doctype html>
+<!DOCTYPE html>
 <html lang="en">
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+
     <title>Developer Q&A - Programming Help Community</title>
-    <meta name="description" content="Get programming help from developers. Ask questions about JavaScript, Python, React, Node.js and more. Upvote best answers." />
+
+    <!-- Basic SEO -->
+    <meta
+      name="description"
+      content="Get programming help from developers. Ask questions about JavaScript, Python, React, Node.js and more. Upvote the best answers."
+    />
     <meta name="author" content="Developer Q&A Community" />
-    <meta name="keywords" content="programming, questions, answers, JavaScript, Python, React, developers, coding help" />
+    <meta
+      name="keywords"
+      content="programming, questions, answers, JavaScript, Python, React, Node.js, developers, coding help"
+    />
 
-    <meta property="og:title" content="Developer Q&A - Programming Help Community" />
-    <meta property="og:description" content="Get programming help from developers. Ask questions about JavaScript, Python, React, Node.js and more." />
+    <!-- Favicon (icon from public folder) -->
+    <link rel="icon" type="image/png" href="/logo1.png" />
+
+    <!-- Open Graph (for Facebook, LinkedIn, etc.) -->
+    <meta
+      property="og:title"
+      content="Developer Q&A - Programming Help Community"
+    />
+    <meta
+      property="og:description"
+      content="Get programming help from developers. Ask questions about JavaScript, Python, React, Node.js and more."
+    />
     <meta property="og:type" content="website" />
-    <meta property="og:image" content="https://lovable.dev/opengraph-image-p98pqg.png" />
+    <meta property="og:image" content="/logo1.png" />
+    <meta property="og:url" content="https://your-domain.com" />
 
+    <!-- Twitter Card -->
     <meta name="twitter:card" content="summary_large_image" />
-    <meta name="twitter:site" content="@lovable_dev" />
-    <meta name="twitter:image" content="https://lovable.dev/opengraph-image-p98pqg.png" />
+    <meta name="twitter:site" content="@your_twitter" />
+    <meta
+      name="twitter:title"
+      content="Developer Q&A - Programming Help Community"
+    />
+    <meta
+      name="twitter:description"
+      content="Join the Developer Q&A community. Ask coding questions, get AI-powered answers, and help others."
+    />
+    <link rel="apple-touch-icon" sizes="180x180" href="/apple-touch-icon.png" />
+    <link rel="icon" type="image/png" sizes="32x32" href="/favicon-32x32.png" />
+    <link rel="icon" type="image/png" sizes="16x16" href="/favicon-16x16.png" />
+    <link rel="manifest" href="/site.webmanifest" />
+    <meta name="twitter:image" content="/logo1.png" />
   </head>
 
   <body>
