--- a/qna-hub-spark-main/index.html
+++ b/qna-hub-spark-main/index.html
@@ -17,10 +17,16 @@
       content="programming, questions, answers, JavaScript, Python, React, Node.js, developers, coding help"
     />
 
-    <!-- Favicon (icon from public folder) -->
+    <!-- Favicon & App Icons -->
+    <link rel="apple-touch-icon" sizes="180x180" href="/apple-touch-icon.png" />
+    <link rel="icon" type="image/png" sizes="32x32" href="/favicon-32x32.png" />
+    <link rel="icon" type="image/png" sizes="16x16" href="/favicon-16x16.png" />
+    <link rel="manifest" href="/site.webmanifest" />
+    <!-- fallback main logo -->
     <link rel="icon" type="image/png" href="/logo1.png" />
 
-    <!-- Open Graph (for Facebook, LinkedIn, etc.) -->
+    <!-- Open Graph (Facebook, LinkedIn) -->
+    <meta property="og:type" content="website" />
     <meta
       property="og:title"
       content="Developer Q&A - Programming Help Community"
@@ -29,7 +35,6 @@
       property="og:description"
       content="Get programming help from developers. Ask questions about JavaScript, Python, React, Node.js and more."
     />
-    <meta property="og:type" content="website" />
     <meta property="og:image" content="/logo1.png" />
     <meta property="og:url" content="https://your-domain.com" />
 
@@ -44,10 +49,6 @@
       name="twitter:description"
       content="Join the Developer Q&A community. Ask coding questions, get AI-powered answers, and help others."
     />
-    <link rel="apple-touch-icon" sizes="180x180" href="/apple-touch-icon.png" />
-    <link rel="icon" type="image/png" sizes="32x32" href="/favicon-32x32.png" />
-    <link rel="icon" type="image/png" sizes="16x16" href="/favicon-16x16.png" />
-    <link rel="manifest" href="/site.webmanifest" />
     <meta name="twitter:image" content="/logo1.png" />
   </head>
 
