--- a/qna-hub-spark-main/index.html
+++ b/qna-hub-spark-main/index.html
@@ -1,59 +1,49 @@
 <!DOCTYPE html>
 <html lang="en">
-  <head>
-    <meta charset="UTF-8" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
 
-    <title>Developer Q&A - Programming Help Community</title>
+<head>
+  <meta charset="UTF-8" />
+  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+  <meta name="application-name" content="Qwizzy" />
+  <meta name="apple-mobile-web-app-title" content="Qwizzy" />
+  <meta name="description" content="this is a community for developer to ask question and get answer" />
+  <title>Qwizzy</title>
 
-    <!-- Basic SEO -->
-    <meta
-      name="description"
-      content="Get programming help from developers. Ask questions about JavaScript, Python, React, Node.js and more. Upvote the best answers."
-    />
-    <meta name="author" content="Developer Q&A Community" />
-    <meta
-      name="keywords"
-      content="programming, questions, answers, JavaScript, Python, React, Node.js, developers, coding help"
-    />
+  <!-- Basic SEO -->
+  <meta name="description"
+    content="Get programming help from developers. Ask questions about JavaScript, Python, React, Node.js and more. Upvote the best answers." />
+  <meta name="author" content="Developer Q&A Community" />
+  <meta name="keywords"
+    content="programming, questions, answers, JavaScript, Python, React, Node.js, developers, coding help" />
 
-    <!-- Favicon & App Icons -->
-    <link rel="apple-touch-icon" sizes="180x180" href="/apple-touch-icon.png" />
-    <link rel="icon" type="image/png" sizes="32x32" href="/favicon-32x32.png" />
-    <link rel="icon" type="image/png" sizes="16x16" href="/favicon-16x16.png" />
-    <link rel="manifest" href="/site.webmanifest" />
-    <!-- fallback main logo -->
-    <link rel="icon" type="image/png" href="/logo1.png" />
+  <!-- Favicon & App Icons -->
+  <link rel="apple-touch-icon" sizes="180x180" href="/apple-touch-icon.png" />
+  <link rel="icon" type="image/png" sizes="32x32" href="/favicon-32x32.png" />
+  <link rel="icon" type="image/png" sizes="16x16" href="/favicon-16x16.png" />
+  <link rel="manifest" href="/site.webmanifest" />
+  <!-- fallback main logo -->
+  <link rel="icon" type="image/png" href="/logo1.png" />
 
-    <!-- Open Graph (Facebook, LinkedIn) -->
-    <meta property="og:type" content="website" />
-    <meta
-      property="og:title"
-      content="Developer Q&A - Programming Help Community"
-    />
-    <meta
-      property="og:description"
-      content="Get programming help from developers. Ask questions about JavaScript, Python, React, Node.js and more."
-    />
-    <meta property="og:image" content="/logo1.png" />
-    <meta property="og:url" content="https://your-domain.com" />
+  <!-- Open Graph (Facebook, LinkedIn) -->
+  <meta property="og:type" content="website" />
+  <meta property="og:title" content="Developer Q&A - Programming Help Community" />
+  <meta property="og:description"
+    content="Get programming help from developers. Ask questions about JavaScript, Python, React, Node.js and more." />
+  <meta property="og:image" content="/logo1.png" />
+  <meta property="og:url" content="https://your-domain.com" />
 
-    <!-- Twitter Card -->
-    <meta name="twitter:card" content="summary_large_image" />
-    <meta name="twitter:site" content="@your_twitter" />
-    <meta
-      name="twitter:title"
-      content="Developer Q&A - Programming Help Community"
-    />
-    <meta
-      name="twitter:description"
-      content="Join the Developer Q&A community. Ask coding questions, get AI-powered answers, and help others."
-    />
-    <meta name="twitter:image" content="/logo1.png" />
-  </head>
+  <!-- Twitter Card -->
+  <meta name="twitter:card" content="summary_large_image" />
+  <meta name="twitter:site" content="@your_twitter" />
+  <meta name="twitter:title" content="Developer Q&A - Programming Help Community" />
+  <meta name="twitter:description"
+    content="Join the Developer Q&A community. Ask coding questions, get AI-powered answers, and help others." />
+  <meta name="twitter:image" content="/logo1.png" />
+</head>
 
-  <body>
-    <div id="root"></div>
-    <script type="module" src="/src/main.tsx"></script>
-  </body>
+<body>
+  <div id="root"></div>
+  <script type="module" src="/src/main.tsx"></script>
+</body>
+
 </html>
