--- a/qna-hub-spark-main/index.html
+++ b/qna-hub-spark-main/index.html
@@ -12,9 +12,9 @@
   <!-- Basic SEO -->
   <meta name="description"
     content="Get programming help from developers. Ask questions about JavaScript, Python, React, Node.js and more. Upvote the best answers." />
-  <meta name="author" content="Developer Q&A Community" />
+  <meta name="author" content="Mehroz Farooq" />
   <meta name="keywords"
-    content="programming, questions, answers, JavaScript, Python, React, Node.js, developers, coding help" />
+    content="programming, questions, answers, Interview Preparation, JavaScript, Python, React, Node.js, developers, coding help" />
 
   <!-- Favicon & App Icons -->
   <link rel="apple-touch-icon" sizes="180x180" href="/apple-touch-icon.png" />
@@ -26,7 +26,7 @@
 
   <!-- Open Graph (Facebook, LinkedIn) -->
   <meta property="og:type" content="website" />
-  <meta property="og:title" content="Developer Q&A - Programming Help Community" />
+  <meta property="og:title" content="Qwizzy" />
   <meta property="og:description"
     content="Get programming help from developers. Ask questions about JavaScript, Python, React, Node.js and more." />
   <meta property="og:image" content="/logo1.png" />
@@ -35,9 +35,9 @@
   <!-- Twitter Card -->
   <meta name="twitter:card" content="summary_large_image" />
   <meta name="twitter:site" content="@your_twitter" />
-  <meta name="twitter:title" content="Developer Q&A - Programming Help Community" />
+  <meta name="twitter:title" content="Qwizzy" />
   <meta name="twitter:description"
-    content="Join the Developer Q&A community. Ask coding questions, get AI-powered answers, and help others." />
+    content="Join the Qwizzy community. Ask coding questions, get AI-powered answers, and help others." />
   <meta name="twitter:image" content="/logo1.png" />
 </head>
 
